# urichat

./: .gitignore  README.md  pyproject.toml  urichat.markpact.md
data/: events.jsonl
markpacts/: urichat.contract.markpact.md  urichat.markpact.md
tests/: test_import.py  test_runtime.py
urichat/: handlers.py  manifest.yaml
