[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urichat"
version = "0.1.0"
description = "Deprecated chat:// URI bridge — transcript to URI forward (use llm:// + message://)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "urisys contributors" }]
keywords = ["uri", "urisys", "urichat", "chat"]
dependencies = ["urisysedge>=0.1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.uv.sources]
urisysedge = { path = "../urisysedge", editable = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["urichat*"]

[tool.setuptools.package-data]
urichat = ["manifest.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
